<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/activity_horizontal_margin_24"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin_18"
        android:layout_marginTop="@dimen/activity_horizontal_margin_16"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/event_viewholder_group_avatar"
            android:layout_width="@dimen/events_view_holder_group_avatar_size"
            android:layout_height="@dimen/events_view_holder_group_avatar_size"
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@drawable/ic_mail"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/event_viewholder_group_title"
                style="@style/RobotoRegular"
                android:text="test group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/dark_grey_blue"
                android:textSize="@dimen/text_14sp"/>

            <TextView
                android:text="17:15 test"
                android:id="@+id/event_viewholder_time"
                style="@style/RobotoRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/bluish_grey"
                android:textSize="@dimen/text_12sp"/>


        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/event_viewholder_text"
        style="@style/RobotoLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin_18"
        android:layout_marginTop="@dimen/activity_vertical_margin_8"
        android:textColor="@color/dark_grey_blue"
        android:textSize="@dimen/text_16sp"/>

    <ImageView
        android:id="@+id/event_viewholder_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/events_view_holder_image_height"
        android:layout_marginRight="@dimen/activity_horizontal_margin_18"
        android:layout_marginTop="@dimen/activity_vertical_margin_4"/>

    <LinearLayout
        android:id="@+id/event_viewholder_doc_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_28"
        android:orientation="vertical">

        <TextView
            style="@style/RobotoLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/events_item_view_please_doc"
            android:textColor="@color/dark_grey_blue"/>

        <Button
            android:id="@+id/event_viewholder_doc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin_18"
            android:layout_marginTop="@dimen/activity_vertical_margin_6"
            android:text="@string/events_item_view_button_doc"
            android:theme="@style/EventDocButton"/>

    </LinearLayout>

    <View
        android:id="@+id/event_viewholder_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_vertical_margin_8"
        android:background="@color/white_four"/>

    <FrameLayout
        android:id="@+id/event_viewholder_empty_list_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/activity_horizontal_margin_18"
        android:paddingBottom="@dimen/activity_vertical_margin_8"
        android:visibility="gone">

        <TextView
            android:id="@+id/event_viewholder_empty_text"
            style="@style/OpenSansLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/events_empty_list_text"
            android:textColor="@color/lighnt_grey_blue"
            android:textSize="@dimen/text_28sp"
            />

    </FrameLayout>

</LinearLayout>