<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/add_child_root_view"
              android:orientation="vertical">

    <ProgressBar
        android:id="@+id/add_child_progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:indeterminate="true"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/add_child_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/add_child_container_margin_bottom">

            <com.ltst.core.ui.AvatarView
                android:id="@+id/add_child_avatar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/avatar_view_avatar_margin_top"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_child_name"
                style="@style/EditTextStyle.Profile.Name.Required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_child_name_margin_top"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_child_last_name"
                style="@style/EditTextStyle.Profile.EmptyIcon.LastName.Required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_child_name_margin_top"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/add_child_gender_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_18"
                    android:gravity="top|center"
                    android:text="@string/add_child_gender"
                    android:textColor="@color/bluish_grey"
                    android:textSize="@dimen/text_16sp"
                    android:textStyle="bold"/>

                <RadioGroup
                    android:id="@+id/add_child_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/add_child_gender_header"
                    android:layout_toRightOf="@+id/add_child_gender_header"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:theme="@style/AppTheme.RadioButton">

                    <RadioButton
                        android:id="@+id/add_child_gender_boy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin_16"
                        android:text="@string/add_child_boy"
                        android:textColor="@color/dark_grey_blue"
                        android:textSize="@dimen/text_16sp"/>

                    <RadioButton
                        android:id="@+id/add_child_gender_girl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin_16"
                        android:text="@string/add_child_girl"
                        android:textColor="@color/dark_grey_blue"
                        android:textSize="@dimen/text_16sp"/>
                </RadioGroup>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/custom_prifle_item_margin_right"
                android:layout_marginRight="@dimen/met_profile_margin_right"
                android:layout_marginTop="@dimen/add_child_gender_separator_margin_top"
                android:background="@color/separator_grey"/>

            <FrameLayout
                android:id="@+id/add_child_birthday_conteainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/custom_prifle_item_margin_right"
                android:layout_marginRight="@dimen/met_profile_margin_right"
                android:layout_marginTop="@dimen/add_child_bithday_margin_top"
                android:foreground="?selectableItemBackground">

                <TextView
                    android:id="@+id/add_child_birthday_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/add_child_birthday"
                    android:textColor="@color/bluish_grey"
                    android:textSize="@dimen/text_18sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:src="@drawable/ic_arrow_drop_down_green"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/custom_prifle_item_margin_right"
                android:layout_marginRight="@dimen/met_profile_margin_right"
                android:layout_marginTop="@dimen/activity_vertical_margin_8"
                android:background="@color/separator_grey"/>

            <FrameLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/met_profile_margin_right"
                android:layout_marginTop="@dimen/add_child_bithday_margin_top"
                android:foreground="?selectableItemBackground">

                <TextView
                    android:id="@+id/add_child_group_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_18"
                    android:gravity="top|left"
                    android:text="@string/add_child_group"
                    android:textColor="@color/bluish_grey"
                    android:textSize="@dimen/text_16sp"
                    android:textStyle="bold"/>


                <FrameLayout
                    android:id="@+id/add_child_group_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/custom_prifle_item_margin_right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/add_child_group_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:textColor="@color/bluish_grey"
                        android:textSize="@dimen/text_18sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/ic_arrow_drop_down_green"/>
                </FrameLayout>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/custom_prifle_item_margin_right"
                android:layout_marginRight="@dimen/met_profile_margin_right"
                android:layout_marginTop="@dimen/activity_vertical_margin_8"
                android:background="@color/separator_grey"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/add_child_medical_separator_margin_top"
                android:background="@color/separator_grey"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/edit_profile_school_info_margin_left"
                android:layout_marginTop="@dimen/edit_profile_school_info_margin_top"
                android:text="@string/add_child_medical_info"
                android:textColor="@color/blue_grey"
                android:textSize="@dimen/text_28sp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_child_blood_field"
                style="@style/EditTextStyle.Profile.Blood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_child_blood_margin_top"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_child_genotype_field"
                style="@style/EditTextStyle.Profile.EmptyIcon.Genotype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_child_medical_margin_top"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_child_allergies_field"
                style="@style/EditTextStyle.Profile.EmptyIcon.Allergies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_child_medical_margin_top"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_child_additional_field"
                style="@style/EditTextStyle.Profile.Additional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_child_additional_margin_top"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>